[project]
name = "forklift"
description = "Make Python CLI tools blazing fast 🚀"
license = { text = "Apache-2.0" }
requires-python = ">=3.7"
authors = [
  { name = "Tal Einat", email = "taleinat@gmail.com" },
]
keywords = [
  "cli",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
]
dynamic = ["readme", "version"]

[project.scripts]
forkliftctl = "forklift.__main__:main"

[project.urls]
Homepage = "https://github.com/taleinat/forklift"

[build-system]
requires = ["hatchling>=1.8.0", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/forklift/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]
[tool.hatch.build.targets.sdist.shared-data]
"src/forklift.sh" = "bin/forklift"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
[tool.hatch.build.targets.wheel.shared-data]
"src/forklift.sh" = "bin/forklift"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["forklift"]
